manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: test-cicd-argo
  labels:
    app: test-cicd-argo
    backstage.io/kubernetes-id: test-cicd-argo
spec:
  selector:
    matchLabels:
      app: test-cicd-argo
  template:
    metadata:
      annotations:
        prometheus.io/path: /actuator/prometheus
        prometheus.io/scrape: "true"
        prometheus.io/port: "8080"
      labels:
        app: test-cicd-argo
        backstage.io/kubernetes-id: test-cicd-argo
    spec:
      containers:
        - name: test-cicd-argo
          image: image-registry.openshift-image-registry.svc.cluster.local:5000/poc-ktools/test-cicd-argo:1.0
          ports:
            - containerPort: 8080
              name: http
          livenessProbe:
            httpGet:
              port: 8080
              path: /actuator/health/liveness
              scheme: HTTP
            timeoutSeconds: 1
            periodSeconds: 10
            successThreshold: 1
            failureThreshold: 3
          readinessProbe:
            httpGet:
              port: 8080
              path: /actuator/health/readiness
              scheme: HTTP
            timeoutSeconds: 1
            periodSeconds: 10
            successThreshold: 1
            failureThreshold: 3
          resources:
            limits:
              memory: 1024Mi
